--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 /* Color Variables
 :root {
     --primary-color: #D5D7E8;
-    --secondary-color: #B2B2B2;
-    --accent1-color: #333F;
+    --secondary-color: #009900;
+    --accent1-color: #009900;
     --accent2-color: #D5D7E8;
 }
 
